# ulpan-pwa

./: .gitignore  Makefile  README.md
client/: stack.yaml  ulpan-client.cabal
client/app/: Main.hs
client/src/UlpanClient/: JSUtils.hs  Run.hs  VocabDrill.hs
interface/: stack.yaml  ulpan-interface.cabal
interface/src/Model/: Vocab.hs  VocabSerialisation.hs
server/: Application.hs  Foundation.hs  Main.hs  stack.yaml  ulpan.cabal
server/Handler/: Home.hs  Resources.hs
server/Model/: VocabApi.hs
server/config/: routes
server/resources/vocab/: hebrew_colloquial_course.yml  hsk1.yml  ulpan.yml
server/templates/: main.hamlet  main.lucius  service-worker.julius
