name:              ulpan-client
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
  other-extensions:    ExistentialQuantification
                       DeriveFunctor
                       TemplateHaskell
                       QuasiQuotes
                       FlexibleContexts
  exposed-modules:     UlpanClient.Run
  other-modules:       UlpanClient.VocabDrill
                       UlpanClient.JSUtils
  build-depends:       base
                     , ulpan-interface
                     , basic-prelude
                     , text
                     , ghcjs-base
                     , ghcjs-dom
                     , aeson
                     , bytestring
                     , random
                     , containers
                     , extra
                     , shakespeare
                     , blaze-html
                     , random-shuffle
  default-language:    Haskell2010

executable ulpan-client
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ulpan-client
  default-language:    Haskell2010

test-suite ulpan-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
  build-depends:       base
                     , basic-prelude
                     , text
                     , HUnit
                     , ulpan-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
